--- a/index.css
+++ b/index.css
@@ -3634,7 +3634,7 @@ select:focus-visible {
   font-weight: 800;
 }
 
-css result page 
+/* css result and upload page */
 
 .upload__button {
   height: 82px;
